<resources>
    <string name="app_name">DesignSample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_navigation_view">NavigationViewActivity</string>
    <string name="title_activity_coordinator_layout">CoordinatorLayoutActivity</string>
    <string name="title_activity_app_bar_layout">AppBarLayoutActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="show_text">请不要在你拿工资的地方玩手机

　　当一个顾客，进店时看到店里的员工低头玩手机，会有什么感觉？

　　当你老婆总抱怨嫁给你没有过好日子的时候？

　　当你抱怨自己买不起房子的时候？

　　当你抱怨别人对你不够好的时候……

　　请先想想你又是什么样子……

　　想想自己这一天都做了什么？

　　是否真的尽力了？

　　其实是糊弄自己……

　　天道酬勤，人道酬诚，商道酬信，业道酬精！

　　放下手机，好好工作，从我做起！

　　一个力求上进的人，很多做人做事的标准，不需要别人督促！

　　不要在领工资的地方玩手机！

　　换位思考

　　——假如设想你现在是老板，会愿意聘用现在的自己吗？

　　——如果非常乐意，那就继续这样做下去；

　　——如果相反你不愿意聘用自己，那就应该去反思你自己当下的行为！

　　——不怕聘用没有工作经验的人，但最终放弃的是没有工作态度的人，无论你是谁！

　　——毕竟，在工作中偷奸耍滑；做事情阴奉阳违；当面工作积极，背后消极怠工；看老板干活，视收入做事；事事斤斤计较于眼前利益得失，这些事情再会伪装的人，都是骗不过自己的！

　　——最后，连你自己都不愿意雇佣自己，你怎么去让你的老板重用你？

　　——能保住现在给你的薪水就不错了——

　　——如果你混日子，对不起，实际上你是混自己，

　　——如果你在公司混日子，你能黑老板多少钱？

　　——可是你，如果在公司几年不好好工作，荒废了几年，几年后你怎么办呢？

　　——你觉得你有竞争力吗？年轻时候吃苦不算什么，老了还要吃苦，才是最可悲的！

　　——致所有努力的人，自省！

　　恶性循坏

　　——当实体店生意不好时，大部分实体店看起来死气沉沉，每个人耷着脑袋、无精打采，店里不开灯，一眼看进去黑乎乎……顾客越发感觉这家餐厅没人气、不敢进，所以恶性循环。

　　当生意不好时——

　　我会让团队打扮的干干净净、帅气靓丽，然后组织大家一起在门口唱歌、跳舞，让路过的顾客感受我们的热情和阳光，更重要的，我想告诉团队：失去什么都不能失去信心！

　　当生意不好时——

　　我会做一个大大的、颜色干净明亮的、非常有吸引力的大海报，上面放上我们的主打产品，放在我们店门口，让路过的顾客一定多看一眼。看一眼，就多一个机会。

　　当生意不好时——

　　我会把店的灯开的亮亮的、足足的，带大家一起整理店面的产品展示台，让经过的顾客看到店里更多的产品：它们那么诱人！

　　当生意不好时——

　　我会在店里组织大家打扫卫生，连植物的叶子也擦一次，把台面桌椅擦干净，早上10点前，下午5点后做一次，时刻保持店面整洁，让每一个进店的客人随时感受品牌高档的环境。

　　当生意不好时——

　　我会走遍附近的门店，看看生意旺店是如何经营的，对比自家门店，找出不足，然后一点一滴的改。

　　当生意不好时——

　　顾客一个一个的抓，一单一单的维护。这个时候员工会产生懈怠心理，我会在班前、班后会上强调：打起十二分的精神，让顾客来一次，就要感觉到“没白来”，一个顾客一个顾客的抓，一单一单的维护住顾客。

　　当生意不好时——

　　我会发动我们身边的每一个人成为我们的宣传员，把我们产品发到网络、发到朋 友 圈，让朋友去影响朋友！生意不好，未必是我们的产品不好，很可能是我们的客户基数不够大，所以，我们要让更多的人知道我们。

　　当生意不好时——

　　门店越是没生意，服务就越不能落下。将员工分成PK小组，提高工作能力，增加干劲。

　　当生意不好时——

　　我会盘点周边门店比较受顾客欢迎的活动，寻找主题，贴合产品的具体情况推出营销活动。

　　这样坚持三个月以后，生意出现了奇迹般的好转……

　　所以，请相信一点一滴付出的力量！</string>
    <string name="test_data">测试数据</string>
    <string name="detail_title">详情标题</string>
    <string name="page1">每日推荐</string>
    <string name="page2">职场指南</string>
    <string name="page3">经典语录</string>
    <string name="author">吴小龙同學</string>
    <string name="bottomsheetdialog">BottomSheetDialog</string>
    <string name="blog">个人博客：<u>http://wuxiaolong.me/</u></string>
    <string name="weixin">微信公众号：<u>吴小龙同学</u></string>
    <string name="github">github：<u>https://github.com/WuXiaolong/</u></string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">请输入账号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."    </string>
    <string name="shortcut_disabled_message1">shortcut_disabled_message1</string>
    <string name="shortcut_long_label1">shortcut_long_label1</string>
    <string name="shortcut_short_label1">shortcut_short_label1</string>
    <string name="shortcut_short_label2">shortcut_short_label2</string>
    <string name="shortcut_long_label2">shortcut_long_label2</string>
</resources>
