<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wuxiaolong.designsupportlibrarysample.SecondFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/qrcode_wuxiaolong"/>

    <LinearLayout
        android:id="@+id/weixin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            style="@style/CommonText"
            android:autoLink="all"
            android:padding="10dp"
            android:text="@string/weixin"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/CommonText"
            android:autoLink="all"
            android:padding="10dp"
            android:text="@string/blog"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/CommonText"
            android:autoLink="all"
            android:padding="10dp"
            android:text="@string/github"/>

    </LinearLayout>
</LinearLayout>
